--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
+    <link rel="stylesheet" href="codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="codemirror/addon/hint/show-hint.css">
+
+    <script src="codemirror/lib/codemirror.js"></script>
+
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/protobuf.js"></script>
@@ -2804,6 +2809,7 @@
             $('textarea').each(function (i, e) {
                 e.style.height = 'auto';
                 e.style.height = (e.scrollHeight) + 'px';
+                CodeMirror(e.element, {})
             });
         }
 
