--- a/www/index.html
+++ b/www/index.html
@@ -2806,6 +2806,12 @@
             for (var i = 0; i < this.stage_textareas.length; i++)
                 for (var j = 0; j < this.stage_textareas[i].length; j++)
                     CodeMirror.fromTextArea($(this.stage_textareas[i][j])[0], {});
+            
+            CodeMirror.fromTextArea($(window.edit_html_editor));
+            CodeMirror.fromTextArea($(window.create_html_editor));
+            CodeMirror.fromTextArea($(window.edit_js_editor));
+            CodeMirror.fromTextArea($(window.create_js_editor));
+                    
         }
 
         GlobalState.prototype.fork_algorithm = function (name) {
