--- a/www/index.html
+++ b/www/index.html
@@ -2765,8 +2765,8 @@
             
             CodeMirror.fromTextArea(window.edit_html_editor[0]);
             CodeMirror.fromTextArea(window.create_html_editor[0]);
-            CodeMirror.fromTextArea(window.edit_js_editor[0]);
-            CodeMirror.fromTextArea(window.create_js_editor[0]);
+            CodeMirror.fromTextArea(window.edit_javascript_editor[0]);
+            CodeMirror.fromTextArea(window.create_javascript_editor[0]);
                     
         }
 
