--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <link rel="stylesheet" href="codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="codemirror/theme/the-matrix.css">
     <script src="codemirror/lib/codemirror.js"></script>
+    <script src="codemirror/mode/javascript/javascript.js"></script>
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
@@ -2755,13 +2757,14 @@
 
         GlobalState.prototype.refresh_editors = function (name) {
             for (var i = 0; i < this.context_textareas.length; i++)
-                CodeMirror.fromTextArea($(this.context_textareas[i])[0], {});
+                CodeMirror.fromTextArea($(this.context_textareas[i])[0], { autoRefresh: true });
             for (var i = 0; i < this.program_textareas.length; i++)
                 for (var j = 0; j < this.program_textareas[i].length; j++)
-                    CodeMirror.fromTextArea($(this.program_textareas[i][j])[0], {});
+                    CodeMirror.fromTextArea($(this.program_textareas[i][j])[0], { autoRefresh: true });
             for (var i = 0; i < this.stage_textareas.length; i++)
                 for (var j = 0; j < this.stage_textareas[i].length; j++)
-                    CodeMirror.fromTextArea($(this.stage_textareas[i][j])[0], {});
+                    CodeMirror.fromTextArea($(this.stage_textareas[i][j])[0], { autoRefresh: true });
+                    
         }
 
         GlobalState.prototype.fork_algorithm = function (name) {
@@ -3304,11 +3307,11 @@
                 }.bind(this))
         }
 
-        CodeMirror.fromTextArea(window.edit_html_editor[0]);
-        CodeMirror.fromTextArea(window.create_html_editor[0]);
-        CodeMirror.fromTextArea(window.edit_javascript_editor[0]);
-        CodeMirror.fromTextArea(window.create_javascript_editor[0]);
-        
+        window.edit_html_codemirror = CodeMirror.fromTextArea(window.edit_html_editor[0], { autoRefresh: true });
+        window.create_html_codemirror = CodeMirror.fromTextArea(window.create_html_editor[0], { autoRefresh: true });
+        window.edit_javascript_codemirror = CodeMirror.fromTextArea(window.edit_javascript_editor[0], { autoRefresh: true });
+        window.create_javascript_codemirror = CodeMirror.fromTextArea(window.create_javascript_editor[0], { autoRefresh: true });
+
         state = new GlobalState();
         window.onload = on_resources_loaded;
     </script>
