--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="codemirror/theme/the-matrix.css">
     <script src="codemirror/lib/codemirror.js"></script>
     <script src="codemirror/mode/javascript/javascript.js"></script>
+    <script src="codemirror/addon/display/autorefresh.js"></script>
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
