--- a/www/index.html
+++ b/www/index.html
@@ -2709,6 +2709,8 @@
         }
 
         GlobalState.prototype.set_ui_algorithm = function (algorithm) {
+            this.destroy_editors();
+
             $(window.location.hash + "_algorithm_title").val(algorithm.name);
             $(window.location.hash + "_algorithm_description").val(algorithm.description);
 
@@ -2766,8 +2768,6 @@
         }
 
         GlobalState.prototype.refresh_editors = function (name) {
-            
-
             window.edit_html_codemirror = CodeMirror.fromTextArea(window.edit_html_editor[0], { autoRefresh: true, lineWrapping: true, theme:'the-matrix', lineNumbers:false, mode:'xml' });
             window.create_html_codemirror = CodeMirror.fromTextArea(window.create_html_editor[0], { autoRefresh: true, lineWrapping: true, theme:'the-matrix', lineNumbers:false, mode:'xml' });
             window.edit_javascript_codemirror = CodeMirror.fromTextArea(window.edit_javascript_editor[0], { autoRefresh: true, lineWrapping: true, theme:'the-matrix', lineNumbers:false, mode:'javascript' });
